# doctorvit

./: README.md
application-code/: DoctorVIT_V1.ipynb  doctorvit_v1.py
doctorvit-hyperstack-prod-package/docker/: Dockerfile  bootstrap_model.sh  entrypoint.sh
doctorvit-hyperstack-prod-package/k8s/: deployment.yaml  hpa.yaml  ingress.yaml  pdb.yaml  service.yaml
doctorvit-hyperstack-prod-package/k8s/cert-manager/: cluster-issuer.yaml
doctorvit-hyperstack-prod-package/k8s/secrets/: s3-secrets.yaml
doctorvit-mvp-package/: README.md
doctorvit-mvp-package/jupyter/: start_jupyter.sh
doctorvit-prod-package/service/: README.md
doctorvit-prod-package/service/app/: loader.py  server.py
doctorvit-prod-package/service/docker/: Dockerfile  entrypoint.sh
doctorvit-prod-package/service/k8s/: deployment.yaml  hpa.yaml  (+2 more)
doctorvit-production-package/: README.md
doctorvit-production-package/scripts/: bootstrap_model.sh  setup_conda_env.sh
doctorvit_prod_package/: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
doctorvit_prod_package/app/: celery_app.py  main.py  tasks.py
doctorvit_prod_package/infra/helm/: Chart.yaml  values.yaml
doctorvit_prod_package/infra/helm/templates/: _helpers.tpl  deployment.yaml  redis.yaml  worker.yaml
doctorvit_prod_package/notebooks/: DoctorVIT_Chat_Bot.ipynb  DoctorVIT_V1.ipynb
doctorvit_prod_package/scripts/: run_local.sh  wait-for-redis.sh
doctorvit_prod_package/src/doctorvit_service/: __init__.py  converter.py  gpu.py  notebook_runner.py  settings.py
doctorvit_prod_package/tests/: test_smoke.py
(+8 files in other folders)
