
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doctorvit-service"
version = "0.1.0"
description = "Production-grade service wrapper for the DoctorVIT notebook"
authors = [{name = "A Javaid"}]
requires-python = ">=3.10"
readme = "README.md"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["doctorvit_service*"]
exclude = ["tests*"]
